# sprint2rpa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/associations/: layout.sample.csv
db/migrations/: 001_sprint2.sql
docs/: arquitetura-sprint2.md  mapeamento-ativo-tag-localizacao.md  pipeline-placa-cadastro.md  roteiro-video.md
src/sprint2/: __init__.py  config.py  db.py  logger.py  main.py  models.py  orchestrator.py  repository.py
src/sprint2/app/: auth.py  streamlit_app.py
src/sprint2/association/: __init__.py  bot.py
src/sprint2/nameplate/: __init__.py  bot.py  extractor.py
src/sprint2/tools/: gen_nameplates.py  seed_demo.py
tests/: test_auth.py  test_extractor.py  test_models.py
